# Homework_2.2

./: .gitignore  Pipfile  diagram.drawio  dockerfile  pyproject.toml  run.py
Personal_assistance_2.2/: test.py
Personal_assistance_2.2/personal_assistant/services/utils/: field.py
Personal_assistance_22/: LICENSE
Personal_assistance_22/databases/: database.db
Personal_assistance_22/personal_assistant/: database.db
Personal_assistance_22/personal_assistant/services/handlers/: __init__.py
Personal_assistance_22/personal_assistant/services/utils/address_book/: address_book.py  record.py
